refactor: 잡다한 코드 리펙터링